--- a/faq.html
+++ b/faq.html
@@ -49,17 +49,17 @@
           <!-- Full-width images with number and caption text -->
           <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
-            <img src="mtn1.jfif" style="width:100%; height: 350px;">
+            <img src="mtn1.jfif"  >
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">2 / 3</div>
-            <img src="./mtn2.jfif" style="width:100%; height: 350px;">
+            <img src="./mtn2.jfif" >
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext">3 / 3</div>
-            <img src="mtn4.jfif" style="width:100%; height: 350px;">
+            <img src="mtn4.jfif" >
           </div>
 
           <!-- Next and previous buttons -->
@@ -69,11 +69,11 @@
         <br>
 
         <!-- The dots/circles -->
-        <div style="text-align:center">
+        <!-- <div style="text-align:center">
           <span class="dot" onclick="currentSlide(1)"></span>
           <span class="dot" onclick="currentSlide(2)"></span>
           <span class="dot" onclick="currentSlide(3)"></span>
-        </div>
+        </div> -->
         <div class="dev">
               <h5>Developer</h5>
               <ul id="dev-list">
@@ -98,6 +98,11 @@
       </div>
     </header>
     <section id="sec">
+      <div class="desktop-user">
+        <i class="fa fa-user"></i>
+        <span>.....</span>
+        <i class="fa fa-laptop"></i>
+      </div>
       <div class="chat-container">
         <div class="bot-first-question">
           <span class="bot-conv-container">
