--- a/faq.html
+++ b/faq.html
@@ -10,11 +10,24 @@
 </head>
 
 <body>
-  <div class="contain">
-    <header>
+  <header>
       <div id="openMenu">
         <i class="fa fa-bars"></i>
       </div>
+      <div id="logo">
+        <span class="maryam">
+          <span id="mar">
+            <em>MTN</em>
+          </span>
+          <span id="yam">ChatBot</span>
+        </span>
+      </div>
+      <div class="toggle">
+        <a href="tel:180" class="fa fa-phone"></a>
+      </div>
+    </header>
+  <div class="contain">
+    <aside>
       <div class="mainMenu">
         <ul id="menu">
           <i class="fa fa-times"></i>
@@ -42,38 +55,21 @@
                 <small>G-mail</small>
               </div>
             </div>
+            <div id="slider">
+            <ul id="slideWrap"> 
+              <li><img src="mtn1.jfif" alt=""></li>
+              <li><img src="mtn2.jfif" alt=""></li>
+              <li><img src="mtn3.jfif" alt=""></li>
+              <!-- <li><img src="img4.jpg" alt=""></li>
+              <li><img src="img5.jpg" alt=""></li> -->
+            </ul>
+            <a id="prev" href="#">&#8810;</a>
+            <a id="next" href="#">&#8811;</a>
+          </div>
           </div>
         </ul>
-        <div class="slideshow-container">
-
-          <!-- Full-width images with number and caption text -->
-          <div class="mySlides fade">
-            <div class="numbertext">1 / 3</div>
-            <img src="mtn1.jfif"  >
-          </div>
-
-          <div class="mySlides fade">
-            <div class="numbertext">2 / 3</div>
-            <img src="./mtn2.jfif" >
-          </div>
-
-          <div class="mySlides fade">
-            <div class="numbertext">3 / 3</div>
-            <img src="mtn4.jfif" >
-          </div>
-
-          <!-- Next and previous buttons -->
-          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-          <a class="next" onclick="plusSlides(1)">&#10095;</a>
-        </div>
         <br>
 
-        <!-- The dots/circles -->
-        <!-- <div style="text-align:center">
-          <span class="dot" onclick="currentSlide(1)"></span>
-          <span class="dot" onclick="currentSlide(2)"></span>
-          <span class="dot" onclick="currentSlide(3)"></span>
-        </div> -->
         <div class="dev">
               <h5>Developer</h5>
               <ul id="dev-list">
@@ -85,23 +81,23 @@
               <em>Adewole Ridwanullahi A. (THIRVECODER)</em>
           </div>
       </div>
-      <div id="logo">
-        <span class="maryam">
-          <span id="mar">
-            <em>MTN</em>
-          </span>
-          <span id="yam">ChatBot</span>
-        </span>
-      </div>
-      <div class="toggle">
-        <a href="tel:180" class="fa fa-phone"></a>
-      </div>
-    </header>
+    </aside>
     <section id="sec">
-      <div class="desktop-user">
-        <i class="fa fa-user"></i>
-        <span>.....</span>
-        <i class="fa fa-laptop"></i>
+      <div id="header">
+        <div id="logo">
+          <span class="maryam">
+            <span id="mar">
+              <em>MTN</em>
+            </span>
+            <span id="yam">ChatBot</span>
+          </span>
+        </div>
+        <div class="comment-icon">
+          <i class="fa fa-comments"></i>
+        </div>
+        <div class="toggle">
+          <a href="tel:180" class="fa fa-phone"></a>
+        </div>
       </div>
       <div class="chat-container">
         <div class="bot-first-question">
@@ -139,7 +135,6 @@
           </div>
         </p>
         
-        <!--<p id="botReply"></p>-->
         
       </div>
     </section>
